--- a/meshy2024/meshy_purejs_noNft/index.html
+++ b/meshy2024/meshy_purejs_noNft/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     
     <style type="text/css">
       body {
         background-color:black;
         margin: 0;
         padding: 0;
+        overflow: hidden; /* Prevent scrolling when in fullscreen */
       }
       canvas {
         padding: 0;
